--- a/admin-core/src/main/resources/templates/core/codeGen/project.html
+++ b/admin-core/src/main/resources/templates/core/codeGen/project.html
@@ -4,14 +4,14 @@
 	<div class="layui-form-item">
 	   <label class="layui-form-label">路径</label>
 	   <div class="layui-input-block">
-	     <input type="text" name="path" required  lay-verify="required"  value="${path}" autocomplete="off" class="layui-input">
+	     <input type="text" username="path" required  lay-verify="required"  value="${path}" autocomplete="off" class="layui-input">
 	   </div>
 	 </div>
 	 
 	 <div class="layui-form-item">
 	   <label class="layui-form-label">包名</label>
 	   <div class="layui-input-block">
-	     <input type="text" name="basePackage" required  lay-verify="required"  value="${basePackage}" autocomplete="off" class="layui-input">
+	     <input type="text" username="basePackage" required  lay-verify="required"  value="${basePackage}" autocomplete="off" class="layui-input">
 	   </div>
 	 </div>
 
@@ -19,7 +19,7 @@
 	 <div class="layui-form-item">
 	   <label class="layui-form-label">添加管理</label>
 	   <div class="layui-input-inline">
-	     <input type="checkbox" name="includeConsole" lay-skin="switch">
+	     <input type="checkbox" username="includeConsole" lay-skin="switch">
 	   </div>
 	  
 	 </div>
