--- a/admin-core/src/main/resources/templates/login.html
+++ b/admin-core/src/main/resources/templates/login.html
@@ -26,14 +26,14 @@
   <div class="layui-form-item">
     <label class="layui-form-label">用户名</label>
     <div class="layui-input-block">
-      <input type="text" name="code" lay-verify="title" autocomplete="off" 
+      <input type="text" username="username" lay-verify="title" autocomplete="off"
       	placeholder="请输入用户名" class="layui-input"  value="admin">
     </div>
   </div>
   <div class="layui-form-item">
     <label class="layui-form-label">密码</label>
     <div class="layui-input-block">
-      <input type="password" name="password" lay-verify="required"  name="" placeholder="请输入密码" autocomplete="off"
+      <input type="password" username="password" lay-verify="required"  username="" placeholder="请输入密码" autocomplete="off"
        class="layui-input" value="123456">
     </div>
   </div>
