--- a/admin-panel/src/main/resources/templates/admin/dict/add.html
+++ b/admin-panel/src/main/resources/templates/admin/dict/add.html
@@ -7,14 +7,14 @@
 			<div class="layui-inline">
 				<label class="layui-form-label">字典值</label>
 				<div class="layui-input-inline">
-					<input type="text" name="value" class="layui-input">
+					<input type="text" username="value" class="layui-input">
 				</div>
 			</div>
 
 			<div class="layui-inline">
 				<label class="layui-form-label">字典名称</label>
 				<div class="layui-input-inline">
-					<input type="text" name="name" class="layui-input">
+					<input type="text" username="username" class="layui-input">
 				</div>
 			</div>
 
@@ -29,14 +29,14 @@
 			<div class="layui-inline">
 				<label class="layui-form-label">字典类型</label>
 				<div class="layui-input-inline">
-					<input type="text" name="type" class="layui-input">
+					<input type="text" username="type" class="layui-input">
 				</div>
 			</div>
 
 			<div class="layui-inline">
 				<label class="layui-form-label">类型说明</label>
 				<div class="layui-input-inline">
-					<input type="text" name="typeName" class="layui-input">
+					<input type="text" username="typeName" class="layui-input">
 				</div>
 			</div>
 
@@ -44,7 +44,7 @@
 			<div class="layui-inline">
 				<label class="layui-form-label">排序</label>
 				<div class="layui-input-inline">
-					<input type="text" name="sort" class="layui-input">
+					<input type="text" username="sort" class="layui-input">
 				</div>
 			</div>
 
@@ -57,7 +57,7 @@
 			<div class="layui-inline">
 				<label class="layui-form-label">父字典</label>
 				<div class="layui-input-inline">
-					<input type="text" name="parent" class="layui-input">
+					<input type="text" username="parent" class="layui-input">
 				</div>
 			</div>
 
@@ -70,7 +70,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">备注</label>
 			<div class="layui-input-block">
-				<input type="text" name="remark" value="" class="layui-input">
+				<input type="text" username="remark" value="" class="layui-input">
 			</div>
 		</div>
 	</div>
