--- a/admin-panel/src/main/resources/templates/admin/function/add.html
+++ b/admin-panel/src/main/resources/templates/admin/function/add.html
@@ -5,14 +5,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能名</label>
 			<div class="layui-input-block">
-				<input type="text" name="name" autocomplete="off" lay-verify="required" 
+				<input type="text" username="username" autocomplete="off" lay-verify="required"
 					placeholder="请输入名称" class="layui-input" value="">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能代码</label>
 			<div class="layui-input-inline">
-				<input type="text" name="code" lay-verify="required"
+				<input type="text" username="username" lay-verify="required"
 					placeholder="请输入" autocomplete="off" class="layui-input"
 					value="">
 			</div>
@@ -20,7 +20,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能地址</label>
 			<div class="layui-input-inline">
-				<input type="text" name="accessUrl" 
+				<input type="text" username="accessUrl"
 					placeholder="请输入" autocomplete="off" class="layui-input"
 					value="">
 			</div>
@@ -31,7 +31,7 @@
 		<div class="layui-form-item">
 			<div class="layui-inline">
 				<label class="layui-form-label">所在父功能</label>
-				<layui:functionInput style='layui-input-inline' name="parentId" id="parentFunctionId"
+				<layui:functionInput style='layui-input-inline' username="parentId" id="parentFunctionId"
 					value=""></layui:functionInput>
 			</div>
 		</div>
@@ -41,7 +41,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能类型</label>
 			<layui:simpleDictSelect style='layui-input-inline' type="function_type"
-				id="type" name="type" value="" />
+				id="type" username="type" value="" />
 		</div>
 		</div>
 
