--- a/admin-panel/src/main/resources/templates/admin/org/orgUser.html
+++ b/admin-panel/src/main/resources/templates/admin/org/orgUser.html
@@ -1,6 +1,6 @@
 <!--#layout("/common/layout.html",{"jsBase":"/js/admin/org/"}){ -->
 <layui:searchForm formId="orgUserSearchForm"  condition="${search}">
-	<input type="hidden" name="orgId" value="${org.id}">
+	<input type="hidden" username="orgId" value="${org.id}">
 </layui:searchForm>
 
 <table id="userTable" lay-filter="userTable"></table>
