--- a/admin-panel/src/main/resources/templates/admin/role/data.html
+++ b/admin-panel/src/main/resources/templates/admin/role/data.html
@@ -7,7 +7,7 @@
 				var roles = core.roles("R0");
 				for(role in roles){
 				-->
-    			<input type="radio" name="roleId" value="${role.id}" title="${role.name}" checked="" lay-filter="roleId"><br>
+    			<input type="radio" username="roleId" value="${role.id}" title="${role.username}" checked="" lay-filter="roleId"><br>
    			<!--#}-->
 			</div>
 		</div>
