--- a/admin-panel/src/main/resources/templates/admin/role/roleUser.html
+++ b/admin-panel/src/main/resources/templates/admin/role/roleUser.html
@@ -1,6 +1,6 @@
 <!--#layout("/common/layout.html",{"jsBase":"/js/admin/role/"}){ -->
 <layui:searchForm formId="roleUserSearchForm"  condition="${search}">
-	<input type="hidden" name="roleId" value="${role.id}">
+	<input type="hidden" username="roleId" value="${role.id}">
 </layui:searchForm>
 
 <table id="userTable" lay-filter="userTable"></table>
