--- a/admin-panel/src/main/resources/templates/admin/user/changePassword.html
+++ b/admin-panel/src/main/resources/templates/admin/user/changePassword.html
@@ -6,16 +6,16 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户姓名</label>
 			<div class="layui-input-block">
-				<input type="text" name="name" disabled autocomplete="off"
-					class="layui-input" value="${user.name}">
+				<input type="text" username="username" disabled autocomplete="off"
+					class="layui-input" value="${user.username}">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户帐号</label>
 			<div class="layui-input-inline">
-				<input type="text" name="code" disabled 
+				<input type="text" username="username" disabled
 					placeholder="请输入" autocomplete="off" class="layui-input"
-					value="${user.code}">
+					value="${user.username}">
 			</div>
 		</div>
 	</div>
@@ -23,14 +23,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">密码</label>
 			<div class="layui-input-inline">
-				<input type="password" name="password" autocomplete="off"
+				<input type="password" username="password" autocomplete="off"
 					placeholder="请输入密码" class="layui-input" value="">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">密码确认</label>
 			<div class="layui-input-inline">
-				<input type="password" name="password2" lay-verify="required"
+				<input type="password" username="password2" lay-verify="required"
 					placeholder="请再次输入密码" autocomplete="off" class="layui-input"
 					>
 			</div>
@@ -38,7 +38,7 @@
 	</div>
 	
 	<layui:submitButtons id="savePassword" />
-	<input type="hidden" name="id" value=${user.id} />
+	<input type="hidden" username="id" value=${user.id} />
 </form>
 <!--#} -->
 <script>
