--- a/admin-panel/src/main/resources/templates/admin/user/userRole.html
+++ b/admin-panel/src/main/resources/templates/admin/user/userRole.html
@@ -1,6 +1,6 @@
 <!--#layout("/common/layout.html",{"jsBase":"/js/admin/user/"}){ -->
 <layui:searchForm formId="userRoleSearchForm"  condition="${search}">
-<input type="hidden" name="userId" value="${user.id}">
+<input type="hidden" username="userId" value="${user.id}">
 </layui:searchForm>
 
   <div class="layui-btn-group">
