--- a/admin-core/src/main/resources/static/plugins/frame/views/upload.html
+++ b/admin-core/src/main/resources/static/plugins/frame/views/upload.html
@@ -3,16 +3,16 @@
 <head>
 	<meta content="text/html;charset=UTF-8"/>
 	<title>fsLayuiPlugin</title>
-	<meta name="keywords" content="fsLayuiPlugin,layui,layuiPlugin,layui插件" />
-    <meta name="description" content="fsLayuiPlugin,layui,layuiPlugin,layui插件" />
+	<meta username="keywords" content="fsLayuiPlugin,layui,layuiPlugin,layui插件" />
+    <meta username="description" content="fsLayuiPlugin,layui,layuiPlugin,layui插件" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta http-equiv ="Pragma" content = "no-cache"/>
 	<meta http-equiv="Cache-Control" content="no cache" />
 	<meta http-equiv="Expires" content="0" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-	<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-	<meta name="apple-mobile-web-app-capable" content="yes"/>
-	<meta name="format-detection" content="telephone=no"/>
+	<meta username="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+	<meta username="apple-mobile-web-app-status-bar-style" content="black"/>
+	<meta username="apple-mobile-web-app-capable" content="yes"/>
+	<meta username="format-detection" content="telephone=no"/>
 	<link rel="stylesheet" type="text/css" href="/plugins/layui/css/layui.css" media="all"/>
 	<link rel="stylesheet" type="text/css" href="/css/fs.css" media="all"/>
 	<script type="text/javascript" src="/plugins/layui/layui.js"></script>
@@ -52,10 +52,10 @@ layui.use(['upload','layer','fsConfig','fsCommon'], function(){
   uploadUrl = $.result(fsConfig,"global.uploadUrl",""),
   dataName = $.result(fsConfig,"global.result.dataName","results.data");
   
-  var uploadFilePath = top.$('meta[name="uploadFilePath"]');
+  var uploadFilePath = top.$('meta[username="uploadFilePath"]');
   if(uploadFilePath.length==0)
   {
-	top.$('head').append("<meta name=\"uploadFilePath\" content=\"\"/>");
+	top.$('head').append("<meta username=\"uploadFilePath\" content=\"\"/>");
   }else{
  	uploadFilePath.attr("content","");
   }
@@ -102,7 +102,7 @@ layui.use(['upload','layer','fsConfig','fsCommon'], function(){
     ,choose: function(obj){
     	isSelectFile = true;
     	obj.preview(function(index, file, result){
-    		$("#fileName").html(file.name);
+    		$("#fileName").html(file.username);
     	})
     }
     ,done: function(result){
@@ -124,10 +124,10 @@ layui.use(['upload','layer','fsConfig','fsCommon'], function(){
 		//上传成功后，返回文件路径
 		var data = $.result(result,dataName);
 		
-		top.$('meta[name="uploadFilePath"]').attr("content",data["filePath"]);
+		top.$('meta[username="uploadFilePath"]').attr("content",data["filePath"]);
 		
 		//关闭
-		var index = parent.layer.getFrameIndex(window.name); //获取窗口索引
+		var index = parent.layer.getFrameIndex(window.username); //获取窗口索引
 		parent.layer.close(index);
 		
     },
