--- a/admin-core/src/main/resources/templates/common/container.html
+++ b/admin-core/src/main/resources/templates/common/container.html
@@ -3,15 +3,15 @@
 <html>
 <head>
 	<meta content="text/html;charset=UTF-8"/>
-	<title>${env("app.name")}</title>
+	<title>${env("app.username")}</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta http-equiv ="Pragma" content = "no-cache"/>
 	<meta http-equiv="Cache-Control" content="no cache" />
 	<meta http-equiv="Expires" content="0" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="format-detection" content="telephone=no"/>
+	<meta username="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+	<meta username="apple-mobile-web-app-status-bar-style" content="black">
+	<meta username="apple-mobile-web-app-capable" content="yes">
+	<meta username="format-detection" content="telephone=no"/>
 	<script src="https://cdn.bootcss.com/pace/1.0.2/pace.min.js?v=${jsVer}"></script>
 	<link href="https://cdn.bootcss.com/pace/1.0.2/themes/pink/pace-theme-flash.css?v=${jsVer}" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="${ctxPath}/plugins/layui/css/layui.css?v=${jsVer}" media="all"/>
