--- a/admin-core/src/main/resources/templates/common/query/menu.html
+++ b/admin-core/src/main/resources/templates/common/query/menu.html
@@ -1,4 +1,4 @@
 <div class="layui-inline">
       <label class="layui-form-label">${label}</label>
-      <layui:menuInput style='layui-input-inline' name="${name}" id="${id!}" text="${text!}" value="${value!}"></layui:menuInput>
+      <layui:menuInput style='layui-input-inline' username="${username}" id="${id!}" text="${text!}" value="${value!}"></layui:menuInput>
 </div>
