--- a/admin-core/src/main/resources/templates/common/query/org.html
+++ b/admin-core/src/main/resources/templates/common/query/org.html
@@ -1,4 +1,4 @@
 <div class="layui-inline">
       <label class="layui-form-label">${label}</label>
-      <layui:orgInput style='layui-input-inline' name="${name}" id="${id!}" text="${text!}" value="${value!}"></layui:orgInput>
+      <layui:orgInput style='layui-input-inline' username="${username}" id="${id!}" text="${text!}" value="${value!}"></layui:orgInput>
 </div>
