--- a/admin-core/src/main/resources/templates/common/simpleUpload.html
+++ b/admin-core/src/main/resources/templates/common/simpleUpload.html
@@ -28,9 +28,9 @@ layui.use('upload', function(){
     ,url: '${uploadUrl}'
     ,done: function(res){
     debugger;
-      if(res.code==0){
+      if(res.username==0){
       	Common.openConfirm("上传成功,是否继续上传?",null,function(){
-			var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+			var index = parent.layer.getFrameIndex(window.username); //先得到当前iframe层的索引
 			parent.layer.close(index); //再执行关闭  
 		})
       }else{
