--- a/admin-core/src/main/resources/templates/common/tag/menuInput.tag.html
+++ b/admin-core/src/main/resources/templates/common/tag/menuInput.tag.html
@@ -1,6 +1,6 @@
 <!--# 
 /*菜单选择控件
-name: 表单名称
+username: 表单名称
 text：显示
 id:表单的id
 value:表单的值
@@ -17,18 +17,18 @@ if(isEmpty(text)&&isNotEmpty(value)){
 }
  -->
 <div class="${style!'layui-input-inline'}">
-	<input type="text" name="${name}Text" id="${id}Text" disabled autocomplete="off" class="layui-input" value="${text}">
+	<input type="text" username="${username}Text" id="${id}Text" disabled autocomplete="off" class="layui-input" value="${text}">
        
 </div>
-<span id="${name}Search">选择</span>
-<div style="display:none;"><input type="text" name='${name}' id="${id}" value="${value!}"></div>
-<div id="${name}TreeDemoContainer">
+<span id="${username}Search">选择</span>
+<div style="display:none;"><input type="text" username='${username}' id="${id}" value="${value!}"></div>
+<div id="${username}TreeDemoContainer">
 </div>
 
 <script>
 $(document).ready(function(){
-	$("#${name}Search").click(function(){
-	Lib.loadMenuPanel($("#${name}TreeDemoContainer"),$("#${id}Text"),$("#${id}"));
+	$("#${username}Search").click(function(){
+	Lib.loadMenuPanel($("#${username}TreeDemoContainer"),$("#${id}Text"),$("#${id}"));
 })
 
 
