--- a/admin-core/src/main/resources/templates/common/tag/roleInput.tag.html
+++ b/admin-core/src/main/resources/templates/common/tag/roleInput.tag.html
@@ -2,14 +2,14 @@
 var expected = value!"";
  -->
 <div class="${style!'layui-input-inline'}">
-	<select name="${name}">
+	<select username="${username}">
 	<option value="">请选择</option>
 	<!--# 
 		var roles = core.roles(type);
 		
 		for(role in roles){
 	 -->
-    <option value="${role.id}" ${role.id==expected?'selected'}>${role.name}</option>
+    <option value="${role.id}" ${role.id==expected?'selected'}>${role.username}</option>
       
    <!--#}-->
     </select>
