--- a/admin-core/src/main/resources/templates/common/tag/simpleDataSelect.tag.html
+++ b/admin-core/src/main/resources/templates/common/tag/simpleDataSelect.tag.html
@@ -1,6 +1,6 @@
 <!--# 
-/*通用数据下拉列表控件,输入有data,value,attrId,attrName,name
-<layui:simpleDataSelect name="orgId" value="${user.orgId}" data="${orgs}" 
+/*通用数据下拉列表控件,输入有data,value,attrId,attrName,username
+<layui:simpleDataSelect username="orgId" value="${user.orgId}" data="${orgs}"
 					attrId="id" attrName="orgName"/>
 */  -->
 <div class="${style!'layui-input-inline'}">
@@ -16,10 +16,10 @@ if(has(readonly)){
 	}
 -->
 	<input type="text"  class="layui-input input-readonly" value="${selectedData[attrName]}"></input>
-	<input type="hidden"  name="${name}" value="${expected}"></input>
+	<input type="hidden"  username="${username}" value="${expected}"></input>
 <!--#}else{  -->
 
-	<select  name="${name}" ${has(id)?("id="+id):''}>
+	<select  username="${username}" ${has(id)?("id="+id):''}>
 		<option  value="">请选择</option>
 	<!--# 
 		var expected = value!"";
