--- a/admin-core/src/main/resources/templates/common/tag/simpleDictSelect.tag.html
+++ b/admin-core/src/main/resources/templates/common/tag/simpleDictSelect.tag.html
@@ -1,7 +1,7 @@
 <!--# 
 /*简单一级字典下拉列表控件 
 <layui:simpleDictSelect  type="org_type" 
-					 name="orgType" value="${user.orgId}" />
+					 username="orgType" value="${user.orgId}" />
 */
 -->
 <div class="${style!'layui-input-inline'}">
@@ -23,11 +23,11 @@ if(has(readonly)){
 		}
 	}
 -->
-<input type="text"  class="layui-input input-readonly" value="${selectedDict.name}"></input>
-<input type="hidden"  name="${name}" ${isNotEmpty(layVerify)?('lay-verify="'+layVerify+'"'):''} value="${expected}"></input>
+<input type="text"  class="layui-input input-readonly" value="${selectedDict.username}"></input>
+<input type="hidden"  username="${username}" ${isNotEmpty(layVerify)?('lay-verify="'+layVerify+'"'):''} value="${expected}"></input>
 <!--#}else{  -->
 
-	<select  data-group="${group!}" name="${name}" ${has(id)?("id="+id):''} ${isNotEmpty(layVerify)?('lay-verify="'+layVerify+'"'):''}>
+	<select  data-group="${group!}" username="${username}" ${has(id)?("id="+id):''} ${isNotEmpty(layVerify)?('lay-verify="'+layVerify+'"'):''}>
 	<option  value="">请选择</option>
 	<!--# 
 		var dicts = [];
@@ -41,7 +41,7 @@ if(has(readonly)){
 		for(dict in dicts){
 	 -->
 	 
-    <option value="${dict.value}" ${dict.value==(expected+"")?'selected'}>${dict.name}</option>
+    <option value="${dict.value}" ${dict.value==(expected+"")?'selected'}>${dict.username}</option>
       
    <!--#}-->
     </select>
