--- a/admin-panel/src/main/resources/templates/admin/function/edit.html
+++ b/admin-panel/src/main/resources/templates/admin/function/edit.html
@@ -5,22 +5,22 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能名</label>
 			<div class="layui-input-block">
-				<input type="text" name="name" autocomplete="off" lay-verify="required" 
-					placeholder="请输入标题" class="layui-input" value="${function.name}">
+				<input type="text" username="username" autocomplete="off" lay-verify="required"
+					placeholder="请输入标题" class="layui-input" value="${function.username}">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能代码</label>
 			<div class="layui-input-inline">
-				<input type="text" name="code" readonly lay-verify="required"
+				<input type="text" username="username" readonly lay-verify="required"
 					placeholder="请输入" autocomplete="off" class="layui-input"
-					value="${function.code}">
+					value="${function.username}">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能地址</label>
 			<div class="layui-input-inline">
-				<input type="text" name="accessUrl"  
+				<input type="text" username="accessUrl"
 					placeholder="请输入" autocomplete="off" class="layui-input"
 					value="${function.accessUrl}">
 			</div>
@@ -31,7 +31,7 @@
 		<div class="layui-form-item">
 			<div class="layui-inline">
 				<label class="layui-form-label">所在父功能</label>
-				<layui:functionInput style='layui-input-inline' name="parentId" id="parentFunctionId"
+				<layui:functionInput style='layui-input-inline' username="parentId" id="parentFunctionId"
 					value="${function.parentId}"></layui:functionInput>
 			</div>
 		</div>
@@ -41,7 +41,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能类型</label>
 			<layui:simpleDictSelect style='layui-input-inline' type="function_type"
-				id="type" name="type" value="${function.type}" />
+				id="type" username="type" value="${function.type}" />
 		</div>
 		</div>
 
@@ -50,7 +50,7 @@
 	
 	
 	<layui:submitButtons id="saveFunction" />
-	<input type="hidden" name="id" value=${function.id} />
+	<input type="hidden" username="id" value=${function.id} />
 </form>
 <!--#} -->
 <script>
