--- a/admin-panel/src/main/resources/templates/admin/org/add.html
+++ b/admin-panel/src/main/resources/templates/admin/org/add.html
@@ -5,14 +5,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">机构名</label>
 			<div class="layui-input-block">
-				<input type="text" name="name" autocomplete="off"
+				<input type="text" username="username" autocomplete="off"
 					placeholder="请输入名称" class="layui-input" value="">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">机构代码</label>
 			<div class="layui-input-inline">
-				<input type="text" name="code"  lay-verify="required"
+				<input type="text" username="username"  lay-verify="required"
 					placeholder="请输入" autocomplete="off" class="layui-input"
 					value="">
 			</div>
@@ -23,7 +23,7 @@
 		<div class="layui-form-item">
 			<div class="layui-inline">
 				<label class="layui-form-label">所在父机构</label>
-				<layui:orgInput style='layui-input-inline' name="parentOrgId" id="parentOrgId"
+				<layui:orgInput style='layui-input-inline' username="parentOrgId" id="parentOrgId"
 					value=""></layui:orgInput>
 			</div>
 		</div>
@@ -33,7 +33,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">机构类型</label>
 			<layui:simpleDictSelect style='layui-input-inline' type="org_type"
-				id="type" name="type" value="" />
+				id="type" username="type" value="" />
 		</div>
 		</div>
 
