--- a/admin-panel/src/main/resources/templates/admin/role/add.html
+++ b/admin-panel/src/main/resources/templates/admin/role/add.html
@@ -5,14 +5,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">角色名称</label>
 			<div class="layui-input-block">
-				<input type="text" name="name" autocomplete="off"
+				<input type="text" username="username" autocomplete="off"
 					 class="layui-input" >
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">角色代码</label>
 			<div class="layui-input-inline">
-				<input type="text" name="code"  lay-verify="required"
+				<input type="text" username="username"  lay-verify="required"
 					autocomplete="off" class="layui-input"
 					>
 			</div>
@@ -24,7 +24,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">角色类型</label>
 			<layui:simpleDictSelect style='layui-input-inline' type="role_type"
-				id="type" name="type" />
+				id="type" username="type" />
 		</div>
 		</div>
 	</div>
