--- a/admin-panel/src/main/resources/templates/admin/role/dataConfigPart.html
+++ b/admin-panel/src/main/resources/templates/admin/role/dataConfigPart.html
@@ -3,9 +3,9 @@ var dataAccess = dataAccessList();
 for(roleFn in list){  -->
 <div class="layui-form-item">
 	<div class="layui-inline">
-		<label class="layui-form-label">${roleFn.name}</label>
+		<label class="layui-form-label">${roleFn.username}</label>
 		<div class="layui-input-inline">
-			<select name="fn-${roleFn.id}" data-id="${roleFn.id}">
+			<select username="fn-${roleFn.id}" data-id="${roleFn.id}">
 				<option value="">请选择放数据权限</option>
 				<!--#for(access in dataAccess){ 
 				var selected = "selected='selected'"; 
@@ -13,7 +13,7 @@ for(roleFn in list){  -->
 				selected="";
 				}
 				-->
-				<option value="${access.type}" ${selected} >${access.name}</option>
+				<option value="${access.type}" ${selected} >${access.username}</option>
 				<!--#}  -->
 			</select>
 		</div>
