--- a/admin-panel/src/main/resources/templates/admin/user/add.html
+++ b/admin-panel/src/main/resources/templates/admin/user/add.html
@@ -6,14 +6,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户姓名</label>
 			<div class="layui-input-block">
-				<input type="text" name="name" autocomplete="off"
+				<input type="text" username="username" autocomplete="off"
 					placeholder="请输入标题" class="layui-input" value="">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户帐号</label>
 			<div class="layui-input-inline">
-				<input type="text" name="code"  lay-verify="required"
+				<input type="text" username="username"  lay-verify="required"
 					placeholder="请输入" autocomplete="off" class="layui-input"
 					value="">
 			</div>
@@ -24,7 +24,7 @@
 		<div class="layui-form-item">
 			<div class="layui-inline">
 				<label class="layui-form-label">所在机构</label>
-				<layui:orgInput style='layui-input-inline' name="orgId" id="orgId"
+				<layui:orgInput style='layui-input-inline' username="orgId" id="orgId"
 					value=""></layui:orgInput>
 			</div>
 		</div>
@@ -34,7 +34,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户状态</label>
 			<layui:simpleDictSelect style='layui-input-inline' type="user_state"
-				id="state" name="state" value="" />
+				id="status" username="status" value="" />
 		</div>
 		</div>
 
@@ -48,7 +48,7 @@
 			<div class="layui-inline">
 				<label class="layui-form-label">职务类型</label>
 				<layui:simpleDictSelect style='layui-input-inline' type="job_type"
-					id="jobType0" name="jobType0" value="" group="job_type"/>
+					id="jobType0" username="jobType0" value="" group="job_type"/>
 			</div>
 		</div>
 		</div>
@@ -57,7 +57,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">职务类型明细</label>
 			<layui:simpleDictSelect style='layui-input-inline' type=""
-				id="jobType1" name="jobType1" value=""  group="job_type"/>
+				id="jobType1" username="jobType1" value=""  group="job_type"/>
 		</div>
 		</div>
 
@@ -65,7 +65,7 @@
 	
 	
 	<div class="layui-row">
-		<layui:attachment name="attachmentId" batchFileUUID="${uuid()}" isNew="true" bizType="User"/>
+		<layui:attachment username="attachmentId" batchFileUUID="${uuid()}" isNew="true" bizType="User"/>
 	</div>
 	
 	
