--- a/admin-panel/src/main/resources/templates/admin/user/userRoleAdd.html
+++ b/admin-panel/src/main/resources/templates/admin/user/userRoleAdd.html
@@ -7,16 +7,16 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户姓名</label>
 			<div class="layui-input-block">
-				<input type="text" name="name" autocomplete="off"
-					placeholder="请输入标题" class="layui-input" value="${user.name}">
+				<input type="text" username="username" autocomplete="off"
+					placeholder="请输入标题" class="layui-input" value="${user.username}">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户帐号</label>
 			<div class="layui-input-inline">
-				<input type="text" name="code" disabled lay-verify="required"
+				<input type="text" username="username" disabled lay-verify="required"
 					placeholder="请输入" autocomplete="off" class="layui-input"
-					value="${user.code}">
+					value="${user.username}">
 			</div>
 		</div>
 	</div>
@@ -25,19 +25,19 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">选择公司</label>
 			<div class="layui-input-block">
-				<layui:orgInput style='layui-input-inline' name="orgId" id="orgId"
+				<layui:orgInput style='layui-input-inline' username="orgId" id="orgId"
 					value="${user.orgId}"></layui:orgInput>
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">选择角色</label>
 			<div class="layui-input-block">
-				<layui:roleInput name="roleId" type="R0" />
+				<layui:roleInput username="roleId" type="R0" />
 			</div>
 		</div>
 	</div>
 	<layui:submitButtons id="saveUserRole" />
-	<input type="hidden" name="userId" value=${user.id} />
+	<input type="hidden" username="userId" value=${user.id} />
 </form>
 <!--#} -->
 <script>
